--- a/qiita_neta/posted/20210825.md
+++ b/qiita_neta/posted/20210825.md
@@ -4,8 +4,9 @@ jakarta validation
 
 SpringBootのapplication.ymdの環境別読み込みの方法
 
-環境変数を使う方法。
-起動オプションで指定する方法もあるみたいだが、開発中はIntelliJから起動したり、eclipseから起動したり、VSCodeから起動したりするのでこっちの方が楽な気がした。
+<h1>環境変数を使う方法。</h1>
+<hr>
+起動オプションで指定する方法もあるみたいだが、現状はIntelliJから起動したり、eclipseから起動したり、VSCodeから起動したりするのでこっちの方が楽な気がした。
 
 application-xxx.ymlという名前の設定ファイルを用意する。
 環境変数SPRING_PROFILES_ACTIVEを作成し、先に作ったapplication-xxx.ymlのxxxの部分をValueに指定する。
